--- a/bxSums.css
+++ b/bxSums.css
@@ -13,6 +13,9 @@
     border-left: 3px solid #d90020;
     z-index: 9;
     border-radius: 2px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 }
 
