--- a/bxSums.css
+++ b/bxSums.css
@@ -23,6 +23,8 @@
 .customBxSums > li {
     cursor: pointer;
     padding-left: 7px;
+    display: flex;
+    font-size: 12px;
 }
 
 .customBxSums > li.totals {
