--- a/bxSumsCards.css
+++ b/bxSumsCards.css
@@ -269,8 +269,9 @@ ul.customBxSums .bandR {
 /* Tags für Kanban und Scrum Ansicht */
 .tasks-kanban-item-title .bsTags,
 .tasks-scrum__item--title .bsTags {
-    margin-top: -15px;
-    margin-right: -50px;
+    display: inline-block;
+    margin: 0 6px 0 0;
+    vertical-align: middle;
 }
 
 .bsTags > span {
@@ -278,16 +279,17 @@ ul.customBxSums .bandR {
     display: inline-block;
     text-align: center;
     width: auto;
-    min-width: 32px;
+    min-width: 22px;
     margin-right: 3px;
-    padding: 2px 4px 3px 4px;
-    border-radius: 4px;
+    padding: 1px 4px 2px 4px;
+    border-radius: 3px;
     color: #ffffff;
-    box-shadow: 0px 2px 3px 1px rgba(0,0,0,0.1);
-    margin-bottom: 2px;
-    font-size: 12px;
+    box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+    font-size: 10px;
+    font-weight: 600;
     text-transform: uppercase;
-    min-height: 0;
+    line-height: 1.3;
+    vertical-align: middle;
 }
 
 .bsTags > span:before, .bsTags > span:after  {
@@ -321,4 +323,28 @@ ul.customBxSums .bandR {
 
 .bsTags > span.cloud {
     background-color: #187eb4;
+}
+
+.bsTags > span.kopie {
+    background-color: #777;
+}
+
+.bsTags > span.bo {
+    background-color: #e67e22;
+}
+
+.bsTags > span.arc {
+    background-color: #3498db;
+}
+
+.bsTags > span.rb {
+    background-color: #9b59b6;
+}
+
+.bsTags > span.mockup {
+    background-color: #e91e63;
+}
+
+.bsTags > span.erledigt {
+    background-color: #27ae60;
 }
